# python-oop

./: LICENSE  README.md  pyproject.toml
python_oop/: encapsulation.py  interface.py  polymorphism.py
